Fix CSS text wrapping on some floats and fixed positioned elements

--- a/admin/static/css/theme.styl
+++ b/admin/static/css/theme.styl
@@ -363,6 +363,7 @@ span.label
         font-size: 0.5em
         font-weight: 300
         margin-left: 0.5em
+        white-space: nowrap
 
       .count
         cursor: pointer
@@ -431,6 +432,7 @@ span.label
           font-size: 1.5em
           line-height: 1.3em
           color: $lightGrey
+          white-space: nowrap
 
           > div
             display: inline-block
@@ -471,6 +473,9 @@ span.label
 
         .note
           font-size: 0.8em
+          margin-bottom: 0.5em
+
+        .link-form
           margin-bottom: 0.5em
 
         input[type='text'],
@@ -671,6 +676,7 @@ span.label
 
       .count
         float: right
+        white-space: nowrap
 
     > ul.list
       margin-bottom: 2em
