--- a/site/static/css/theme.styl
+++ b/site/static/css/theme.styl
@@ -236,6 +236,8 @@
   position: fixed
   top: 50%
   right: 5%
+  white-space: nowrap
+
   > div
     display: inline-block
     font-size: 4em
@@ -473,6 +475,7 @@ article
         float: right
         padding: 5px 10px
         color: $lightGrey
+        white-space: nowrap
 
         &.fresh-true
           display: block
@@ -602,6 +605,7 @@ footer
   .social-icons
     float: right
     margin: 0 0 1em 1em
+    white-space: nowrap
 
     a
       display: inline-block
